added laravel certification

--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
         a description language for http requests called <a href="https://github.com/dani-gouken/paper-rest/">Paper
             REST</a>
     </p>
-    <h2>Projects</h2>
+    <h2>Certification(s)</h2>
+    <ul>
+        <li>
+            <a href="https://exam.laravelcert.com/is/daniel/certified-since/2022-06-17">Laravel developer Certification</a>
+        </li>
+    </ul>
+    <h2>Open Source Projects</h2>
     <ul>
         <li><a href="https://github.com/dani-gouken/json_to_php">JSON to PHP</a> - A tool to generate PHP classes from
             JSON</li>
