update about me section

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <h2>About me</h2>
     <p>
         <img src="me.jpg" style="width: 10rem;float:right">
-        A software engineer who loves crafting delightful experiences and products. I am a backend/Mobile engineer
-        currently working at <a href="https://www.maviance.com/">Maviance PLC</a>. Also tinkering around with
-        a description language for http requests called <a href="https://github.com/dani-gouken/paper-rest/">Paper
-            REST</a>
+        I am an experienced Software Developer with 5 years of experience, adept in bringing forth expertise in design,
+        installation, testing and maintenance of software systems. I am able
+        to effectively self-manage during independent projects, as well as collaborate as part of a productive team.
     </p>
     <h2>Certification(s)</h2>
     <ul>
         <li>
-            <a href="https://exam.laravelcert.com/is/daniel/certified-since/2022-06-17">Laravel developer Certification</a>
+            <a href="https://exam.laravelcert.com/is/daniel/certified-since/2022-06-17">Laravel developer
+                Certification</a>
         </li>
     </ul>
     <h2>Open Source Projects</h2>
