fixed linkedin url

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul style="display: flex;list-style: none; justify-items: center;gap: 1rem;padding:0px">
                 <li><a href="https://twitter.com/danigouken">Twitter</a></li>
                 <li><a href="https://github.com/dani-gouken/">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/nghokeng-860340172">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/nghokeng-daniel-st%C3%A9phane-860340172/">LinkedIn</a></li>
             </ul>
         </header>
     </article>
