--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             <h1>Nghokeng Daniel Stéphane</h1>
             <aside>Backend/Mobile Developer</aside>
             <ul style="display: flex;list-style: none; justify-items: center;gap: 1rem;padding:0px">
-                <li><a href="https://twitter.com/danigouken">Twitter</a></li>
                 <li><a href="https://github.com/dani-gouken/">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/nghokeng-daniel-st%C3%A9phane-860340172/">LinkedIn</a></li>
             </ul>
@@ -69,7 +68,7 @@
     <h2>About me</h2>
     <p>
         <img src="me.jpg" style="width: 10rem;float:right">
-        I am an experienced Software Developer with 5 years of experience, adept in bringing forth expertise in design,
+        I am an experienced Software Developer with 7 years of experience, adept in bringing forth expertise in design,
         installation, testing and maintenance of software systems. I am able
         to effectively self-manage during independent projects, as well as collaborate as part of a productive team.
     </p>
@@ -82,8 +81,8 @@
     </ul>
     <h2>Open Source Projects</h2>
     <ul>
-        <li><a href="https://github.com/dani-gouken/json_to_php">JSON to PHP</a> - A tool to generate PHP classes from
-            JSON</li>
+        <li><a href="https://github.com/dani-gouken/nomad">Nomad</a> - An interpreter written in go</li>
+        <li><a href="https://github.com/dani-gouken/json_to_php">JSON2PHP</a> - A web app to generate php classes from JSON</li>
         <li><a href="https://github.com/dani-gouken/di">Atom DI</a> - A dependency injection container written in PHP
         </li>
         <li><a href="https://github.com/dani-gouken/gcp-global-kill-switch">GCP Kill Swith</a> - A GCP cloud function
