--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <article>
         <header>
             <h1>Nghokeng Daniel Stéphane</h1>
-            <aside>Backend/Mobile Developer</aside>
+            <aside>Senior Backend Developer</aside>
             <ul style="display: flex;list-style: none; justify-items: center;gap: 1rem;padding:0px">
                 <li><a href="https://github.com/dani-gouken/">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/nghokeng-daniel-st%C3%A9phane-860340172/">LinkedIn</a></li>
